[gd_scene load_steps=19 format=2]

[ext_resource path="res://assets/styles/BrightButtonStyleHover.tres" type="StyleBox" id=1]
[ext_resource path="res://assets/fonts/delfino.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://scenes/editor/AreaPanel.gd" type="Script" id=3]
[ext_resource path="res://scenes/shared/background/backgrounds/night/night.png" type="Texture" id=4]
[ext_resource path="res://scenes/shared/background/foregrounds/none/preview.png" type="Texture" id=5]
[ext_resource path="res://scenes/editor/sounds/click2.wav" type="AudioStream" id=6]
[ext_resource path="res://assets/styles/RedButtonStyleNormal.tres" type="StyleBox" id=7]
[ext_resource path="res://assets/styles/RedButtonStyleHover.tres" type="StyleBox" id=8]
[ext_resource path="res://assets/styles/LevelListPanel.tres" type="StyleBox" id=9]
[ext_resource path="res://assets/styles/BrightButtonStyleNormal.tres" type="StyleBox" id=10]
[ext_resource path="res://scenes/editor/sounds/hover.wav" type="AudioStream" id=11]
[ext_resource path="res://scenes/menu/127Button.gd" type="Script" id=12]
[ext_resource path="res://assets/styles/ButtonStyleDisabled.tres" type="StyleBox" id=13]
[ext_resource path="res://scenes/editor/assets/clickable_shadow_arrow.png" type="Texture" id=14]
[ext_resource path="res://scenes/editor/assets/clickable_shadow_arrow_hover.png" type="Texture" id=15]
[ext_resource path="res://scenes/editor/assets/clickable_shadow_arrow_disabled.png" type="Texture" id=16]

[sub_resource type="DynamicFont" id=1]
size = 40
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 25
font_data = ExtResource( 2 )

[node name="AreaPanel" type="Control"]
margin_right = 40.0
margin_bottom = 40.0
mouse_filter = 2
script = ExtResource( 3 )

[node name="Panel" type="Panel" parent="."]
margin_left = 10.0
margin_top = 13.0
margin_right = 1007.0
margin_bottom = 213.0
mouse_filter = 2
custom_styles/panel = ExtResource( 9 )

[node name="Preview" type="Control" parent="."]
margin_left = 35.0
margin_top = 35.0
margin_right = 75.0
margin_bottom = 75.0
mouse_filter = 2

[node name="BackgroundPreview" type="TextureRect" parent="Preview"]
margin_right = 768.0
margin_bottom = 432.0
rect_scale = Vector2( 0.35, 0.35 )
mouse_filter = 2
texture = ExtResource( 4 )

[node name="ForegroundPreview" type="TextureRect" parent="Preview"]
margin_right = 768.0
margin_bottom = 432.0
rect_scale = Vector2( 0.35, 0.35 )
mouse_filter = 2
texture = ExtResource( 5 )

[node name="ID" type="Label" parent="."]
margin_left = 336.0
margin_top = 35.0
margin_right = 457.0
margin_bottom = 98.0
custom_fonts/font = SubResource( 1 )
text = "ID: 0"

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_left = 335.0
margin_top = 125.0
margin_right = 966.0
margin_bottom = 177.0
custom_constants/separation = 16

[node name="SwitchToButton" type="Button" parent="HBoxContainer"]
margin_right = 208.0
margin_bottom = 52.0
size_flags_horizontal = 3
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
custom_styles/hover = ExtResource( 1 )
custom_styles/pressed = ExtResource( 10 )
custom_styles/disabled = ExtResource( 13 )
custom_styles/normal = ExtResource( 10 )
shortcut_in_tooltip = false
action_mode = 0
text = "Switch to Area"
script = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HoverSound" type="AudioStreamPlayer" parent="HBoxContainer/SwitchToButton"]
stream = ExtResource( 11 )
volume_db = -10.0

[node name="ClickSound" type="AudioStreamPlayer" parent="HBoxContainer/SwitchToButton"]
stream = ExtResource( 6 )
volume_db = -10.0

[node name="DeleteButton" type="Button" parent="HBoxContainer"]
margin_left = 224.0
margin_right = 403.0
margin_bottom = 52.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 2 )
custom_styles/hover = ExtResource( 8 )
custom_styles/pressed = ExtResource( 7 )
custom_styles/disabled = ExtResource( 13 )
custom_styles/normal = ExtResource( 7 )
shortcut_in_tooltip = false
action_mode = 0
text = "Delete Area"
script = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HoverSound" type="AudioStreamPlayer" parent="HBoxContainer/DeleteButton"]
stream = ExtResource( 11 )
volume_db = -10.0

[node name="ClickSound" type="AudioStreamPlayer" parent="HBoxContainer/DeleteButton"]
stream = ExtResource( 6 )
volume_db = -10.0

[node name="DuplicateButton" type="Button" parent="HBoxContainer"]
margin_left = 419.0
margin_right = 631.0
margin_bottom = 52.0
size_flags_horizontal = 3
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
custom_styles/hover = ExtResource( 1 )
custom_styles/pressed = ExtResource( 10 )
custom_styles/disabled = ExtResource( 13 )
custom_styles/normal = ExtResource( 10 )
shortcut_in_tooltip = false
action_mode = 0
text = "Duplicate Area"
script = ExtResource( 12 )

[node name="HoverSound" type="AudioStreamPlayer" parent="HBoxContainer/DuplicateButton"]
stream = ExtResource( 11 )
volume_db = -10.0

[node name="ClickSound" type="AudioStreamPlayer" parent="HBoxContainer/DuplicateButton"]
stream = ExtResource( 6 )
volume_db = -10.0

[node name="MoveArea" type="Control" parent="."]
margin_left = 738.0
margin_top = 13.0
margin_right = 1015.0
margin_bottom = 111.0

[node name="MoveUp" type="TextureButton" parent="MoveArea"]
margin_left = 50.0
margin_top = 85.0
margin_right = 126.0
margin_bottom = 161.0
rect_rotation = -90.0
texture_normal = ExtResource( 14 )
texture_hover = ExtResource( 15 )
texture_disabled = ExtResource( 16 )
expand = true

[node name="MoveDown" type="TextureButton" parent="MoveArea"]
margin_left = 210.0
margin_top = 9.0
margin_right = 286.0
margin_bottom = 85.0
rect_rotation = 90.0
texture_normal = ExtResource( 14 )
texture_hover = ExtResource( 15 )
texture_disabled = ExtResource( 16 )
expand = true

[connection signal="pressed" from="HBoxContainer/SwitchToButton" to="HBoxContainer/SwitchToButton" method="_on_ResetLevelButton_pressed"]
[connection signal="pressed" from="HBoxContainer/DeleteButton" to="HBoxContainer/DeleteButton" method="_on_ResetLevelButton_pressed"]
[connection signal="pressed" from="HBoxContainer/DuplicateButton" to="HBoxContainer/DuplicateButton" method="_on_ResetLevelButton_pressed"]
